# visprog

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Driver.java  Human.java  Main.java  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  gradle.properties  imgui.vcxproj  imgui.vcxproj.filters  imgui_demo.slnx  implot.vcxproj  implot.vcxproj.filters  local.properties  main.vcxproj  main.vcxproj.filters  readme.md  server.py  settings.gradle.kts
Release/: imgui.ini
app/: build.gradle.kts
app/kotlin+java/: MainActivity.kt  readme.md
app/kotlin+java/src/: Human.kt  test.kt  tester.kt
app/kotlin+java/ui/theme/: Theme.kt
app/manifests/: AndroidManifest.xml
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/res/layout/: activity_main.xml
app/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_calculator.xml  activity_lifecycle.xml  activity_location.xml  activity_main.xml  activity_media_player.xml  activity_service.xml  activity_sockets.xml  (+2 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
(+43 files in other folders)
